# machine

./: Cargo.toml  README.md  Readme.md
arguments/src/: lib.rs
cmd/src/: lib.rs
console/src/: lib.rs
examples/: um3.txt
examples/um1/: harmonic_series.txt
examples/um2/: harmonic_series.txt
examples/um3/: harmonic_series.txt
examples/ums/: harmonic_series.txt
exe/: Cargo.toml
exe/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
options/src/: format.rs  lib.rs  machine.rs
um/: Cargo.toml
um/src/: help.rs  lib.rs  machine.rs  main.rs  memory.rs
um1/: Cargo.toml
um1/src/: lib.rs
um2/: Cargo.toml
um2/src/: lib.rs
um3/: Cargo.toml
um3/src/: command_line.rs  commands.rs  lib.rs  main.rs
ums/: Cargo.toml
ums/src/: lib.rs
